Change basebuild verification content in index.html
Updated basebuild verification meta tag.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Basebuild verification -->
-  <meta name="basebuild-verification" content="bc_381e8y3l" />
-  <meta name="base:app_id" content="694724a8d77c069a945be332" />
+  <meta name="basebuild-verification" content="bc_dc4pnq1n" />
   <title>Berry Platform — Builder Verification</title>
 
   <style>
