--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <!-- Basebuild verification -->
   <meta name="basebuild-verification" content="bc_dc4pnq1n" />
+  <meta name="base:app_id" content="696733214991800a6d9d6207" /> 
   <title>Berry Platform — Builder Verification</title>
 
   <style>
